Fixed popout closing when scrolling on mobile
Closes #512

--- a/docs-site/style.css
+++ b/docs-site/style.css
@@ -192,6 +192,10 @@
   padding: 0;
   border: 0.45rem solid transparent;
   z-index: 1;
+  height: 10px;
+  width: 10px;
+  text-indent: -999em;
+  overflow: hidden;
 }
 .react-datepicker__navigation--previous {
   left: 10px;
@@ -550,11 +554,14 @@
   background-color: transparent;
   border: 0;
   cursor: pointer;
-  display: inline-block;
-  height: 0;
   outline: 0;
   padding: 0;
   vertical-align: middle;
+  position: absolute;
+  height: 16px;
+  width: 16px;
+  top: 25%;
+  right: 7px;
 }
 .react-datepicker__close-icon::after {
   background-color: #216ba5;
@@ -571,9 +578,8 @@
   margin: -8px auto 0;
   padding: 2px;
   position: absolute;
-  right: 7px;
+  right: 0px;
   text-align: center;
-  top: 50%;
 }
 
 .react-datepicker__today-button {
